+ Support for QWORDs
+ Support for DWORDs and QWORDs with different endiannes than CPU
+ Output attributes/date/size for dirs/file (feature request #6)
! Fixed bug where the current dir of a drive was scanned instead of its root dir
  when only the drive was specified in the scan dir list, e.g. "C:\" was used as "C:"
! Reduced memory footprint for comparison and output by roughly 95%
! Updated Italian and German translation
* Internal rework of comparison and output logic
* Allow multi line output for each difference
* Fixed some VS6 compilation issues
* Bug #12: add note to run as admin in readme file

V1.9.0 2013-02-02
+ Add 64-Bit builds
+ Add Unicode builds with .hivu files (not compatible with ANSI .hiv files)
+ Structure of hive files enhanced, while keeping backwards compatibility for ANSI builds
+ Skip list checks now also against the single key/value/file name additionally to checking the complete path
+ Add a proper manifest file to enable UAC elevation
+ Symbol files released for all builds
! Add support for various compilers
! Various code cleanups
* New program icon (thanks to the PortableApps guys)
* All Regshot versions can be build via WDK

V1.8.2 2007-11-03
! Change some calls to ANSI version (lstrcmp->strcmp...)
! Use risk . and .. compare
! Use HeapAlloc instead of GlobalAlloc, danger but slightly faster, see source code
! Html differ color from e0e0e0 to e0f0e0 [Thanks Charles!]
+ Add French language fixed, Kazakh language.
+ Add new style browse for folder by Belogorokhov Youri! (NT+)
+ Do not save setting to regshot.ini when there is no such ini file
 (idea from "alan borer" in my msg board)
+ Fix crash bug in former version if start from cmd window
! Minor changes and minor bug fixed

V1.8.1 2007-06-20
! Fix a Crash bug in 1.8.0! (LoadHive()->ReadFile())
+ Dir chains comparison is more human.
+ "UseLongRegHead" option added in regshot.ini to compatible with undoReg (1.46)